# rag-chatbot

./: .gitignore  vercel.json
backend/: document_loader.py  main.py  pinecone_db.py  pyproject.toml  rag.py
frontend/: .gitignore  package-lock.json  package.json
frontend/app/: globals.css  page.js
frontend/app/chat/: page.js
frontend/app/upload/: page.js
frontend/components/: Header.js
frontend/lib/: api.js
